@@ -585,8 +585,8 @@ shifted by
 .I shift
 samples.  A positive
 .I shift
-indicates a shift forward in time.  Results of shifting past the beginning- or
-end-of-file is implementation dependent.  The
+indicates a forward shift, towards the end-of-field.  Results of shifting past
+the beginning- or end-of-field is implementation dependent.  The
 .I shift
 parameter may be either a literal number, or else the field code of a
 .B CONST
