@@ -103,8 +103,9 @@ libgetdata_la_SOURCES = add.c ascii.c ${BZIP2_C} close.c common.c compat.c \
 												fragment.c getdata.c globals.c ${GZIP_C} index.c \
 												include.c ${LEGACY_C} ${LZMA_C} meta_list.c mod.c \
 												move.c name.c native.c nfields.c nframes.c nmeta.c \
-												open.c parse.c protect.c putdata.c raw.c ${SLIM_C} \
-												spf.c string.c types.c ${GETDATA_LEGACY_H} internal.h
+												nsamples.c open.c parse.c protect.c putdata.c raw.c \
+												${SLIM_C} spf.c string.c types.c ${GETDATA_LEGACY_H} \
+												internal.h
 libgetdata_la_LDFLAGS = $(EXPORT_DYNAMIC) -export-symbols-regex '^[^_]' \
 												-version-info \
 												${GETDATA_IFACE_VERSION}:${GETDATA_IMPL_REVISION}:${GETDATA_IFACE_AGE} \
